force-app/main/default/objects/Contract/fields/Total_Packages_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Total_Packages_Shipped__c</fullName>
    <label>Total Packages Shipped</label>
    <summarizedField>ST_ACR_Consumption__c.No_Of_Packages__c</summarizedField>
    <summaryForeignKey>ST_ACR_Consumption__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>