force-app/main/default/objects/Contract/fields/Total_Shipment_Number_Of_Attemps__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipment_Number_Of_Attemps__c</fullName>
    <label>Total Shipment Number Of Attemps</label>
    <summarizedField>ST_ACR_Consumption__c.No_Of_Attempts__c</summarizedField>
    <summaryForeignKey>ST_ACR_Consumption__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>