force-app/main/default/objects/Contract/fields/Total_Shipment_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipment_Value__c</fullName>
    <label>Total Shipment Value</label>
    <summarizedField>ST_ACR_Consumption__c.Shipment_Value__c</summarizedField>
    <summaryForeignKey>ST_ACR_Consumption__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>