force-app/main/default/objects/Contract/validationRules/CheckInvoicePaymentStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInvoicePaymentStatus</fullName>
    <active>false</active>
    <errorConditionFormula>AND(! ISBLANK( Invoice__c ), ISPICKVAL( Business_Type__c , &apos;ACR&apos;), Invoice__r.blng__PaymentStatus__c != &apos;Paid&apos;, ISPICKVAL( Status , &apos;Activated&apos;) )</errorConditionFormula>
    <errorMessage>Contract cant be activated because Invoice Payment not Paid</errorMessage>
</ValidationRule>