force-app/main/default/objects/Contract/validationRules/CheckOnContractCancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOnContractCancellation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status),&apos;Activated&apos;),ISCHANGED(Status), ISPICKVAL(Status, &apos;Cancelled&apos;)
)</errorConditionFormula>
    <errorMessage>Activated Contract cannot be Cancelled.</errorMessage>
</ValidationRule>