force-app/main/default/objects/Contract/validationRules/CheckOnStartAndEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOnStartAndEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate &gt;  EndDate</errorConditionFormula>
    <errorMessage>Contract End Date can&apos;t be earlier than Contract Start Date.</errorMessage>
</ValidationRule>