force-app/main/default/objects/Contract/validationRules/legacy_customer.validationRule-meta.xml
<ValidationRule>
    <fullName>legacy_customer</fullName>
    <active>true</active>
    <errorConditionFormula>AND((Is_Legacy_Contract__c  &lt;&gt; true),
AND(NOT( Contract_Amount__c =500000)),NOT( Contract_Amount__c =120000),NOT( Contract_Amount__c =2500000),NOT( Contract_Amount__c =1000000),NOT( Contract_Amount__c =250000), ISPICKVAL(BVC_Service__c,&apos;eSHIP&apos;))</errorConditionFormula>
    <errorDisplayField>Contract_Amount__c</errorDisplayField>
    <errorMessage>You cannot select this amount if the contract is not legacy</errorMessage>
</ValidationRule>