force-app/main/default/objects/Contract/validationRules/LockContractAfterExpiration.validationRule-meta.xml
<ValidationRule>
    <fullName>LockContractAfterExpiration</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(Status) ,ISPICKVAL(PRIORVALUE(Status),&apos;Expired&apos;))</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Expired Contracts are not editable.</errorMessage>
</ValidationRule>