force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>SBQQ__Order__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Business_Type__c</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>