force-app/main/default/objects/Contract/listViews/AllDraftContracts.listView-meta.xml
<ListView>
    <fullName>AllDraftContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Type__c</field>
        <operation>equals</operation>
        <value>ACR</value>
    </filters>
    <label>All Draft Contracts</label>
</ListView>